<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_appointments"
            android:title="@string/menu_appointments" />
        <item
            android:id="@+id/nav_punters"
            android:icon="@drawable/ic_punters"
            android:title="@string/menu_punters" />
    </group>

    <item tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/nav_gift"
                android:icon="@drawable/ic_gift"
                android:title="@string/menu_gift" />
            <item
                android:id="@+id/nav_refer"
                android:icon="@drawable/ic_refer"
                android:title="@string/menu_refer" />
            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_privacy" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_faq"
                android:title="@string/menu_faq" />
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_cal"
                android:title="@string/menu_call" />
        </menu>
    </item>
    <item tools:ignore="MenuTitle">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login"
                android:title="@string/menu_login" />
        </menu>
    </item>

</menu>
